scss/ionic.app.scss
// The path for our ionicons font files, relative to the built CSS in www/css
$ionicons-font-path: "../lib/ionic/fonts" !default;

@font-face {
  font-family: "Roboto";
  font-style: normal;
  font-weight: 100;
  src: local("Roboto Thin"), local("Roboto-Thin"), url(../img/Roboto-Thin.woff2) format("woff2"), url(../img/Roboto-Thin.ttf) format("truetype");
  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
@font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 300;
    src: local("Roboto Light"), local("Roboto-Light"), url(../img/Roboto-Light.woff2) format("woff2"), url(../img/Roboto-Light.ttf) format("truetype");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
@font-face {
    font-family: "Roboto";
    font-style: normal;
    font-weight: 400;
    src: local("Roboto"), local("Roboto-Regular"), url(../img/Roboto-Regular.woff2) format("woff2"), url(../img/Roboto-Regular.ttf) format("truetype");
    unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
}
$font-family-base: "Roboto", sans-serif !default;

// Include all of Ionic
@import "../www/lib/ionic/scss/ionic";

.link {
    color: #387ef5;
    text-decoration: underline;
    cursor: pointer;
}

textarea {
  background: none
}

.center {
  text-align: center;
  justify-content: center
}

.vertical-center .scroll {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center
}

.scroll-content:not(.cancel-height) > .scroll, .full-height {
  height: 100%
}

.limit-width {
  max-width: 800px;
  margin: 0 auto
}

.ui-disabled {
  opacity: .3;
  zoom: 1;
  cursor: default !important;
  pointer-events: none;
}

.white {
  color: #fff !important
}

.door-button {
  background-color: #444;
  color: #fff;
  border-radius: 100px;
  font-size: 3em;
  font-weight: 100;
  height: 200px;
  line-height: 200px;
  margin: auto;
  position: relative;
  text-align: center;
  width: 200px;
  display: block
}

.history {
  table {
    font-size:12px;
    background:#eaebec;
    margin:20px;
    border:#ccc 1px solid;
    border-radius:3px;
    box-shadow: 0 1px 2px #d1d1d1;
    width: 80%;
    margin: 0 auto
  }
  table th {
    padding:21px 25px 22px 25px;
    border-top:1px solid #fafafa;
    border-bottom:1px solid #e0e0e0;
    background: #ededed;
    background: linear-gradient(#ededed, #ebebeb);
  }
  table th:first-child {
    text-align: left;
    padding-left:20px;
  }
  table tr:first-child th:first-child {
    border-top-left-radius:3px;
  }
  table tr:first-child th:last-child {
    border-top-right-radius:3px;
  }
  table tr {
    text-align: center;
    padding-left:20px;
  }
  table td:first-child {
    text-align: left;
    padding-left:20px;
    border-left: 0;
  }
  table td {
    padding:18px;
    border-top: 1px solid #ffffff;
    border-bottom:1px solid #e0e0e0;
    border-left: 1px solid #e0e0e0;
    background: #fafafa;
    background: linear-gradient(#fbfbfb, #fafafa);
  }
  table tr.even td {
    background: #f6f6f6;
    background: linear-gradient(#f8f8f8, #f6f6f6);
  }
  table tr:last-child td {
    border-bottom:0;
  }
  table tr:last-child td:first-child {
    border-bottom-left-radius:3px;
  }
  table tr:last-child td:last-child {
    border-bottom-right-radius:3px;
  }
}

